- Resolved search bar whitespace issue

--- a/docs/src/components/Search/index.scss
+++ b/docs/src/components/Search/index.scss
@@ -10,6 +10,10 @@
     display: flex;
 }
 
+.top0 {
+    top: 0;
+}
+
 .searchInputWrapper {
     position: relative;
     width: calc(100% - 350px);
